safemlx-sys/src/mlx-c/mlx/c/array.h

typedef _Fcomplex mlx_complex64_t;
typedef float _Complex mlx_complex64_t;
/**
 * \defgroup mlx_array Array
 * MLX N-dimensional array object.
 */
/**@{*/

/**
 * A N-dimensional array object.
 */
typedef struct mlx_array_ {
  void* ctx;
  // Null for ordinary new/delete. Prepared inputs and prepaid handle clones use
  // this closed arena owner. Shallow C copies still obey unique-handle custody.
  void* prepared_owner;
} mlx_array;
/**
 * Array element type.
 */
typedef enum mlx_dtype_ {
  MLX_BOOL,
  MLX_UINT8,
  MLX_UINT16,
  MLX_UINT32,
  MLX_UINT64,
  MLX_INT8,
  MLX_INT16,
  MLX_INT32,
  MLX_INT64,
  MLX_FLOAT16,
  MLX_FLOAT32,
  MLX_FLOAT64,
  MLX_BFLOAT16,
  MLX_COMPLEX64,
} mlx_dtype;
/**
 * Read completed allocator-owned or certified host-transfer backing without
 * evaluating, polling, or waiting. Unknown for unfinished or foreign storage.
 * Nonzero identity generations are never reused by this linked native runtime,
 * even after backing retires. They do not retain storage or persist across runs.
 */
int mlx_array_allocation_info(
    bool* known, bool* host_transfer, uint64_t* identity, size_t* bytes, const mlx_array arr);
/**
 * Borrowed descriptor witness. No field owns or pins an array, shape, backing,
 * completion or allowance. Caller must retain the actual array and serialize
 * its descriptor access for the entire read/fill loan. Completed backing is
 * certified by the same kernel as mlx_array_allocation_info; unknown stays
 * unknown. Shape is immutable descriptor storage, not a completion certificate.
 */
typedef struct mlx_array_descriptor_ {
  uintptr_t descriptor;
  const int* shape;
  size_t rank;
  mlx_dtype dtype;
  size_t elements;
  size_t logical_bytes;
  uint32_t status;
  bool event_present;
  const void* data;
  const void* buffer;
  bool known;
  bool host_transfer;
  uint64_t identity;
  size_t allocation_bytes;
  mlx_memory_placement placement;
  size_t host_control_bytes;
} mlx_array_descriptor;
uint32_t mlx_array_descriptor_read(mlx_array_descriptor* out, const mlx_array arr);
/** Rechecks the same witness before writing an exact, disjoint caller-owned
 * shape destination. No rank cap or destination allocation. Zero rank accepts
 * a null destination and still validates source identity/current-state facts.
 */
uint32_t mlx_array_descriptor_fill_shape(
    const mlx_array arr, const mlx_array_descriptor* expected,
    int* destination, size_t count);
/** Concrete native scalar/control bytes only. No array, runtime or callback. */
size_t mlx_array_descriptor_control_bytes(void);
/* outcome: 0 = unfinished/uncertified, 1 = no allocation, 2 = consumed.
 * The caller exclusively owns a fresh node and payload until outcome 2.
 * Successful handoff never allocates and cannot subsequently fail. Caller
 * serializes attachment and keeps the actual backing alive. Release may run on
 * any native thread and must not throw, block, allocate or enter the runtime.
 * Payload must not itself retain the destination backing or graph. */
int mlx_array_attach_prepared_allocation_owner(
    int* outcome, const mlx_array arr, void* node,
    void* payload, void (*release)(void*));
/**
 * Attach opaque ownership to completed certified physical backing, preserving
 * allocation identity and all native/host aliases. Caller serializes attachment.
 * Ownership transfers only when this succeeds with *attached == true. Otherwise
 * payload remains caller-owned and release is never called. Release can run on
 * any native thread and must not throw, block, allocate or reenter the runtime.
 */
int mlx_array_retain_allocation_owner(
    bool* attached, const mlx_array arr, void* payload, void (*release)(void*));
/**
 * Retain payload-free ownership on a shared lazy descriptor and publish it to
 * certified backing when materialized. Does not evaluate, poll or wait. Existing
 * descriptor clones and subsequent physical aliases share this retention;
 * independently allocated results require their own attachment. Unrecognized
 * future backing fails materialization before publication. Payload must not
 * retain this descriptor, its graph, or any covered backing. Handoff and callback
 * requirements are identical to mlx_array_retain_allocation_owner.
 */
int mlx_array_retain_deferred_allocation_owner(
    bool* attached, const mlx_array arr, void* payload, void (*release)(void*));
/**
 * The array's dimension.
 */
size_t mlx_array_ndim(const mlx_array arr);
/**
 * The shape of the array.
 * Returns: a pointer to the sizes of each dimension.
 */
const int* mlx_array_shape(const mlx_array arr);
/**
 * The strides of the array.
 * Returns: a pointer to the sizes of each dimension.
 */
const size_t* mlx_array_strides(const mlx_array arr);
/** Signed native strides, in elements, including reversed views. */
const int64_t* mlx_array_signed_strides(const mlx_array arr);
/**
 * The shape of the array in a particular dimension.
 */
int mlx_array_dim(const mlx_array arr, int dim);
/**
 * The array element type.
 */
mlx_dtype mlx_array_dtype(const mlx_array arr);
/**
 * Evaluate the array.
 */
int mlx_array_eval(mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_bool(bool* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_uint8(uint8_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_uint16(uint16_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_uint32(uint32_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_uint64(uint64_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_int8(int8_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_int16(int16_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_int32(int32_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_int64(int64_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_float32(float* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_float64(double* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_complex64(mlx_complex64_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_float16(float16_t* res, const mlx_array arr);
/**
 * Access the value of a scalar array.
 */
int mlx_array_item_bfloat16(bfloat16_t* res, const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `bool*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const bool* mlx_array_data_bool(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `uint8_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const uint8_t* mlx_array_data_uint8(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `uint16_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const uint16_t* mlx_array_data_uint16(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `uint32_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const uint32_t* mlx_array_data_uint32(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `uint64_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const uint64_t* mlx_array_data_uint64(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `int8_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const int8_t* mlx_array_data_int8(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `int16_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const int16_t* mlx_array_data_int16(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `int32_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const int32_t* mlx_array_data_int32(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `int64_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const int64_t* mlx_array_data_int64(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `float32*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const float* mlx_array_data_float32(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `float64*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const double* mlx_array_data_float64(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `_Complex*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const mlx_complex64_t* mlx_array_data_complex64(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `float16_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const float16_t* mlx_array_data_float16(const mlx_array arr);
/**
 * Returns a pointer to the array data, cast to `bfloat16_t*`.
 * Array must be evaluated, otherwise returns NULL.
 */
const bfloat16_t* mlx_array_data_bfloat16(const mlx_array arr);