safemlx-sys/src/bindings.rs

pub type mlx_array_descriptor = mlx_array_descriptor_;
extern "C" {
    pub fn mlx_array_descriptor_read(out: *mut mlx_array_descriptor, arr: mlx_array) -> u32;
    pub fn mlx_array_descriptor_fill_shape(
        arr: mlx_array,
        expected: *const mlx_array_descriptor,
        destination: *mut ::std::os::raw::c_int,
        count: usize,
    ) -> u32;
    pub fn mlx_array_descriptor_control_bytes() -> usize;
}
extern "C" {
    #[doc = "Read completed allocator or certified host-transfer backing without evaluation. Unknown for unfinished or unrecognized storage."]
    pub fn mlx_array_allocation_info(
        known: *mut bool,
        host_transfer: *mut bool,
        identity: *mut u64,
        bytes: *mut usize,
        arr: mlx_array,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "Retain opaque ownership with completed certified backing. Ownership transfers only on success with attached=true; the callback may run on any native thread."]
    pub fn mlx_array_retain_allocation_owner(
        attached: *mut bool,
        arr: mlx_array,
        payload: *mut ::std::os::raw::c_void,
        release: ::std::option::Option<unsafe extern "C" fn(*mut ::std::os::raw::c_void)>,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "Retain payload-free authority on a shared lazy descriptor, publishing to certified backing during materialization without evaluation or polling. Ownership transfers only on attached=true."]
    pub fn mlx_array_retain_deferred_allocation_owner(
        attached: *mut bool,
        arr: mlx_array,
        payload: *mut ::std::os::raw::c_void,
        release: ::std::option::Option<unsafe extern "C" fn(*mut ::std::os::raw::c_void)>,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " The array's dimension."]
    pub fn mlx_array_ndim(arr: mlx_array) -> usize;
}
extern "C" {
    #[doc = " The shape of the array.\n Returns: a pointer to the sizes of each dimension."]
    pub fn mlx_array_shape(arr: mlx_array) -> *const ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " The strides of the array.\n Returns: a pointer to the sizes of each dimension."]
    pub fn mlx_array_strides(arr: mlx_array) -> *const usize;
    pub fn mlx_array_signed_strides(arr: mlx_array) -> *const i64;
}
extern "C" {
    #[doc = " The shape of the array in a particular dimension."]
    pub fn mlx_array_dim(arr: mlx_array, dim: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " The array element type."]
    pub fn mlx_array_dtype(arr: mlx_array) -> mlx_dtype;
}
extern "C" {
    #[doc = " Evaluate the array."]
    pub fn mlx_array_eval(arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_bool(res: *mut bool, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_uint8(res: *mut u8, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_uint16(res: *mut u16, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_uint32(res: *mut u32, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_uint64(res: *mut u64, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_int8(res: *mut i8, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_int16(res: *mut i16, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_int32(res: *mut i32, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_int64(res: *mut i64, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_float32(res: *mut f32, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_float64(res: *mut f64, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_complex64(
        res: *mut mlx_complex64_t,
        arr: mlx_array,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_float16(res: *mut float16_t, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Access the value of a scalar array."]
    pub fn mlx_array_item_bfloat16(res: *mut bfloat16_t, arr: mlx_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `bool*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_bool(arr: mlx_array) -> *const bool;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `uint8_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_uint8(arr: mlx_array) -> *const u8;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `uint16_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_uint16(arr: mlx_array) -> *const u16;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `uint32_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_uint32(arr: mlx_array) -> *const u32;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `uint64_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_uint64(arr: mlx_array) -> *const u64;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `int8_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_int8(arr: mlx_array) -> *const i8;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `int16_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_int16(arr: mlx_array) -> *const i16;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `int32_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_int32(arr: mlx_array) -> *const i32;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `int64_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_int64(arr: mlx_array) -> *const i64;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `float32*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_float32(arr: mlx_array) -> *const f32;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `float64*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_float64(arr: mlx_array) -> *const f64;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `_Complex*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_complex64(arr: mlx_array) -> *const mlx_complex64_t;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `float16_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_float16(arr: mlx_array) -> *const float16_t;
}
extern "C" {
    #[doc = " Returns a pointer to the array data, cast to `bfloat16_t*`.\n Array must be evaluated, otherwise returns NULL."]
    pub fn mlx_array_data_bfloat16(arr: mlx_array) -> *const bfloat16_t;
}
#[doc = " A string-to-array map"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_map_string_to_array_ {
    pub ctx: *mut ::std::os::raw::c_void,
}
#[doc = " A string-to-array map"]
pub type mlx_map_string_to_array = mlx_map_string_to_array_;
extern "C" {
    #[doc = " Returns a new empty string-to-array map."]
    pub fn mlx_map_string_to_array_new() -> mlx_map_string_to_array;
}
extern "C" {
    #[doc = " Set map to provided src map."]
    pub fn mlx_map_string_to_array_set(
        map: *mut mlx_map_string_to_array,
        src: mlx_map_string_to_array,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Free a string-to-array map."]
    pub fn mlx_map_string_to_array_free(map: mlx_map_string_to_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Insert a new `value` at the specified `key` in the map."]
    pub fn mlx_map_string_to_array_insert(
        map: mlx_map_string_to_array,
        key: *const ::std::os::raw::c_char,
        value: mlx_array,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the value indexed at the specified `key` in the map."]
    pub fn mlx_map_string_to_array_get(
        value: *mut mlx_array,
        map: mlx_map_string_to_array,
        key: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[doc = " An iterator over a string-to-array map."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_map_string_to_array_iterator_ {
    pub ctx: *mut ::std::os::raw::c_void,
    pub map_ctx: *mut ::std::os::raw::c_void,
}
#[doc = " An iterator over a string-to-array map."]
pub type mlx_map_string_to_array_iterator = mlx_map_string_to_array_iterator_;
extern "C" {
    #[doc = " Returns a new iterator over the given map."]
    pub fn mlx_map_string_to_array_iterator_new(
        map: mlx_map_string_to_array,
    ) -> mlx_map_string_to_array_iterator;
}
extern "C" {
    #[doc = " Free iterator."]
    pub fn mlx_map_string_to_array_iterator_free(
        it: mlx_map_string_to_array_iterator,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Increment iterator."]
    pub fn mlx_map_string_to_array_iterator_next(
        key: *mut *const ::std::os::raw::c_char,
        value: *mut mlx_array,
        it: mlx_map_string_to_array_iterator,
    ) -> ::std::os::raw::c_int;
}
#[doc = " A string-to-string map"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_map_string_to_string_ {
    pub ctx: *mut ::std::os::raw::c_void,
}
#[doc = " A string-to-string map"]
pub type mlx_map_string_to_string = mlx_map_string_to_string_;
extern "C" {
    #[doc = " Returns a new empty string-to-string map."]
    pub fn mlx_map_string_to_string_new() -> mlx_map_string_to_string;
}
extern "C" {
    #[doc = " Set map to provided src map."]
    pub fn mlx_map_string_to_string_set(
        map: *mut mlx_map_string_to_string,
        src: mlx_map_string_to_string,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Free a string-to-string map."]
    pub fn mlx_map_string_to_string_free(map: mlx_map_string_to_string) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Insert a new `value` at the specified `key` in the map."]
    pub fn mlx_map_string_to_string_insert(
        map: mlx_map_string_to_string,
        key: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the value indexed at the specified `key` in the map."]
    pub fn mlx_map_string_to_string_get(
        value: *mut *const ::std::os::raw::c_char,
        map: mlx_map_string_to_string,
        key: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[doc = " An iterator over a string-to-string map."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_map_string_to_string_iterator_ {
    pub ctx: *mut ::std::os::raw::c_void,
    pub map_ctx: *mut ::std::os::raw::c_void,
}
